[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/DragTheCubes/AT.png" type="Texture" id=1]
[ext_resource path="res://Screens/MiniGames/DragTheCubes/Elements/LetterCube.gd" type="Script" id=2]
[ext_resource path="res://Resources/DragTheCubes/CubeBT.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.9308, 65.6832 )

[node name="LetterCube" type="Node2D"]
script = ExtResource( 2 )

[node name="BackgroundSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="LetterSprite" type="Sprite" parent="."]
position = Vector2( -12, 6 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -47.0
margin_top = -47.0
margin_right = 47.0
margin_bottom = 47.0
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
